# FG-Forge-Updater

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  data.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  lint-python.yml  mypy  mypy.yml  pytest.yml  python-autofix.yaml  python.yml  release.yml  ruff.yml  scorecards.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_build_processing_py.html  z_145eef247bfb46b6_dropzone_py.html  z_145eef247bfb46b6_forge_api_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_users_graph_py.html
src/: build_processing.py  drop_file.py  dropzone.py  forge_api.py  main.py  users_graph.py
tests/: test_forge_credentials.py  test_forge_item.py  test_forge_urls.py  test_get_build_file.py  test_main.py
tests/dropzone/: test_add_file_to_dropzone.py  test_dropzone_error_handling.py
tests/forge_api/: test_forge_credentials.py  test_forge_item.py  test_forge_release_channels.py  test_forge_urls.py
tests/forge_api/forge_item/: test_forge_item_creation.py  test_forge_item_login.py
tests/main/: test_build_text.py  test_configure_headless_chrome.py  test_construct_objects.py  test_get_build_file.py
tests/main/markdown_example/: markdown.html
