[project]
name = "fg-forge-updater"
version = "1.3.2"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "bmos", email = "wil.thieme@protonmail.com" }]
urls = { Repository = "https://github.com/bmos/fg_forge_updater" }
dependencies = [
    "beautifulsoup4==4.13.1",
    "markdown==3.7",
    "matplotlib==3.10.0",
    "mdformat-gfm==0.4.1",
    "mdformat-frontmatter==2.0.8",
    "mdformat-footnote==0.1.1",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "seaborn==0.13.2",
    "selenium==4.28.1",
    "requestium==0.4.0"
]

[project.optional-dependencies]
dev = [
    "bandit[toml]==1.8.2",
    "mypy==1.15.0",
    "pandas-stubs==2.2.3.241126",
    "polyfactory==2.19.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.9.5",
    "types-beautifulsoup4==4.12.0.20241020",
    "types-Markdown==3.7.0.20241204",
    "types-requests==2.32.0.20241016",
    "types-seaborn==0.13.2.20250111"
]
github-actions = [
    "coverage==7.6.1",
]

[tool.ruff]
line-length = 160
target-version = "py311"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["F", "E", "W", "D", "YTT", "LOG", "A", "C4", "DTZ", "EM", "G", "T20", "BLE", "PT", "SIM", "RUF", "UP"]
ignore = ["E501", "D415", "D404", "D401", "D400", "D212", "D205", "D203", "D200", "D1"]

[[tool.mypy.overrides]]
module = [
    "requestium"
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.paths]
source = [
    "src/",
    ]
